crates/macros/tests/debug_job/fail/extract_self_ref.stderr
error: Jobs must only take owned values
  --> tests/debug_job/fail/extract_self_ref.rs:19:18
   |
19 |     async fn job(&self) {}
   |                  ^^^^^
